check_errors2.txt
    Checking swe-edge-egress-tls v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\tls)
    Checking swe-edge-egress-auth v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\auth)
    Checking swe-edge-egress-cache v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\cache)
    Checking swe-edge-egress-cassette v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\cassette)
    Checking swe-edge-egress-rate v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\rate)
error[E0425]: cannot find value `b_cfg` in this scope
  --> main\features\tls\tests\gateway_int_test.rs:26:19
   |
26 |         matches!(&b_cfg, TlsConfig::None),
   |                   ^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error[E0599]: no method named `build` found for struct `CacheLayer` in the current scope
  --> main\features\cache\tests\cache_layer_int_test.rs:31:10
   |
29 |       let _layer: CacheLayer = build_cache_layer(CacheConfig::default())
   |  ______________________________-
30 | |         .expect("builder() must succeed")
31 | |         .build()
   | |         -^^^^^ method not found in `CacheLayer`
   | |_________|
   |

error: could not compile `swe-edge-egress-tls` (test "gateway_int_test") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0425]: cannot find value `b_cfg` in this scope
  --> main\features\rate\tests\gateway_int_test.rs:22:10
   |
22 |         &b_cfg.tokens_per_second >= 1,
   |          ^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0599`.
error[E0277]: can't compare `&u32` with `{integer}`
  --> main\features\rate\tests\gateway_int_test.rs:30:5
   |
30 |     assert_eq!(&b_cfg.tokens_per_second, 10);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `&u32 == {integer}`
   |
   = help: the trait `PartialEq<{integer}>` is not implemented for `&u32`
help: consider dereferencing here
  --> C:\Users\elvis\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\macros\mod.rs:46:22
   |
46 |                 if !(**left_val == *right_val) {
   |                      +

error[E0277]: can't compare `&u32` with `{integer}`
  --> main\features\rate\tests\gateway_int_test.rs:31:5
   |
31 |     assert_eq!(&b_cfg.burst_capacity, 20);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `&u32 == {integer}`
   |
   = help: the trait `PartialEq<{integer}>` is not implemented for `&u32`
help: consider dereferencing here
  --> C:\Users\elvis\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\macros\mod.rs:46:22
   |
46 |                 if !(**left_val == *right_val) {
   |                      +

error: could not compile `swe-edge-egress-cache` (test "cache_layer_int_test") due to 1 previous error
error[E0599]: no method named `build` found for struct `RateLayer` in the current scope
  --> main\features\rate\tests\gateway_int_test.rs:39:10
   |
37 |       let layer: RateLayer = build_rate_layer(RateConfig::default())
   |  ____________________________-
38 | |         .expect("builder() must succeed")
39 | |         .build()
   | |         -^^^^^ method not found in `RateLayer`
   | |_________|
   |

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
  --> main\features\rate\tests\gateway_int_test.rs:50:5
   |
50 |     ApplicationConfigBuilder::with_config(make_cfg())
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error[E0277]: can't compare `&u32` with `{integer}`
  --> main\features\rate\tests\gateway_int_test.rs:91:5
   |
91 |     assert_eq!(&b_cfg.tokens_per_second, 1000);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `&u32 == {integer}`
   |
   = help: the trait `PartialEq<{integer}>` is not implemented for `&u32`
help: consider dereferencing here
  --> C:\Users\elvis\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\macros\mod.rs:46:22
   |
46 |                 if !(**left_val == *right_val) {
   |                      +

Some errors have detailed explanations: E0277, E0425, E0433, E0599.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `swe-edge-egress-rate` (test "gateway_int_test") due to 6 previous errors
